# lk-rec-server

./: .dockerignore  .gitignore  .readthedocs.yml  Dockerfile  LICENSE  README.md  app.py  config.cfg  config.json  config_reader.py  controller.py  data.db.REMOVED.git-id  data_manager.py  db_manager.py  db_migration_manager.py  docker-compose.yml  environment.yaml  lenskit_proxy.py  model_manager.py  my_notes.txt  notes.txt  requirements.txt  setup.cfg  setup.py  tests.py  wsgi.py
. github/workflows/: main.yml
.github/workflows/: ci.yml  main.yml
doc/: accuracy.ipynb  conf.py  configuration.rst  deployment.rst  endpoints.rst  examples.ipynb  index.rst  performance.ipynb  training_quality.rst  userguide.rst
lkweb/: app.py  db_manager.py  model_file_manager.py  model_manager.py  requirements.txt
service/: Dockerfile  app.py  config.cfg  config.json  config_debug.cfg  config_prod.cfg  config_reader.py  db_manager.py  model_file_manager.py  model_manager.py  requirements.txt
test_db/: Dockerfile  create_tables.sql  fill_tables.sh  filltables.sh  insert_new_ratings.sql  notes.txt  setup.sql
tests/: docker-compose.yml
tests/functional/features/: models.feature  predictions.feature  recommendations.feature
tests/functional/step_defs/: conf_tests.py  test_models.py  test_predictions.py  (+3 more)
tests/performance/: PerformanceTesting.ipynb  PerformanceTesting.py  PerformanceTesting2.ipynb  PerformanceTestingResults.ipynb  config.json  results.txt  train_save_model.py  train_save_model_config.json
util/: train_save_model.py  train_save_model_config.json
(+9 files in other folders)
