[metadata]
name = lkpy-web
version = 0.1.0
author = Michael Ekstrand, Carlos Segura
author_email = michaelekstrand@boisestate.edu
description = The recommendation server for Lenskit
long_description = file: README.md
long_description_content_type = text/markdown

url = https://webservice.lenskit.org
license = MIT License
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]    
python_requires = >= 3.6
packages = find:
install_requires =
    lenskit >= 0.10
    flask
    sqlalchemy

[options.extras_require]
docs =
    sphinx >= 3
    sphinx_rtd_theme
    nbsphinx
    recommonmark
    ipython

[build_sphinx]
build-dir=build/doc
source-dir=doc
